After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785808 - libtracker-miner: Add missing break in property switch
libtracker-miner: Add missing break in property switch
Status: RESOLVED FIXED
Product: tracker
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: tracker-general
tracker-general
Depends on:
Blocks:
 
 
Reported: 2017-08-04 12:10 UTC by Philip Withnall
Modified: 2017-08-04 13:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libtracker-miner: Add missing break in property switch (949 bytes, patch)
2017-08-04 12:10 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2017-08-04 12:10:08 UTC
Trivial patch attached.
Comment 1 Philip Withnall 2017-08-04 12:10:12 UTC
Created attachment 356943 [details] [review]
libtracker-miner: Add missing break in property switch

Spotted by Coverity (CID #1452446).

Signed-off-by: Philip Withnall <withnall@endlessm.com>
Comment 2 Carlos Garnacho 2017-08-04 13:03:18 UTC
Comment on attachment 356943 [details] [review]
libtracker-miner: Add missing break in property switch

Oops, and yay for the fresh coverity info :)
Comment 3 Philip Withnall 2017-08-04 13:28:35 UTC
Attachment 356943 [details] pushed as 11b910d - libtracker-miner: Add missing break in property switch