libtracker-miner: Add missing break in property switch

Spotted by Coverity (CID #1452446).

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://bugzilla.gnome.org/show_bug.cgi?id=785808